--- a/index.ipynb
+++ b/index.ipynb
@@ -8,13 +8,15 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In this lab, you'll practice your knowledge on Join statements.\n",
+    "In this lab, you'll practice your knowledge of `JOIN` statements, using various types of joins and various methods for specifying the links between them.\n",
     "\n",
     "## Objectives\n",
     "\n",
     "You will be able to:\n",
-    "- Write queries that make use of various types of Joins\n",
-    "- Join tables using foreign keys"
+    "* Write SQL queries that make use of various types of joins\n",
+    "* Compare and contrast the various types of joins\n",
+    "* Discuss how primary and foreign keys are used in SQL\n",
+    "* Decide and perform whichever type of join is best for retrieving desired data"
    ]
   },
   {
@@ -23,11 +25,11 @@
    "source": [
     "## CRM Schema\n",
     "\n",
-    "In almost all cases, rather then just working with a single table we will typically need data from multiple tables. \n",
-    "Doing this requires the use of **joins ** using shared columns from the two tables. \n",
+    "In almost all cases, rather than just working with a single table you will typically need data from multiple tables. \n",
+    "Doing this requires the use of **joins** using shared columns from the two tables. \n",
     "\n",
-    "In this lab, we'll use the same Customer Relationship Management (CRM) database we used in our lecture before!\n",
-    "<img src='Database-Schema.png' width=550>"
+    "In this lab, you'll use the same customer relationship management (CRM) database that you saw from the previous lesson.\n",
+    "<img src='images/Database-Schema.png' width=\"600\">"
    ]
   },
   {
@@ -40,118 +42,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('data.sqlite')\n",
+    "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display the names of all the employees in Boston."
+    "## Display the names of all the employees in Boston.\n",
+    "Hint: join the employees and offices tables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  firstName   lastName\n",
+       "0     Julie   Firrelli\n",
+       "1     Steve  Patterson"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "cur.execute(\"\"\"SELECT firstName, lastName FROM employees JOIN offices USING (officeCode) WHERE city = 'Boston';\"\"\")\n",
+    "df = pd.DataFrame(cur.fetchall())\n",
+    "df.columns = [i[0] for i in cur.description]\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Do any offices have no employees?"
+    "## Are there any offices that have zero employees?\n",
+    "Hint: Combine the employees and offices tables and use a group by."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>officeCode</th>\n",
+       "      <th>employeeCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Boston</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>London</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city officeCode  employeeCount\n",
+       "0         Boston          2              2\n",
+       "1         London          7              2\n",
+       "2            NYC          3              2\n",
+       "3          Paris          4              5\n",
+       "4  San Francisco          1              6\n",
+       "5         Sydney          6              4\n",
+       "6          Tokyo          5              2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Write 3 Questions of your own and answer them"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Answers will vary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Level Up: Display the names of each product each employee has sold."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Level Up: Display the Number of Products each Employee Has sold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "cur.execute(\"\"\"SELECT city, officeCode, COUNT(employeeNumber) as employeeCount FROM offices JOIN employees USING (officeCode) GROUP BY city;\"\"\")\n",
+    "\n",
+    "df = pd.DataFrame(cur.fetchall())\n",
+    "df.columns = [i[0] for i in cur.description]\n",
+    "df"
    ]
   },
   {
@@ -165,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congrats! You now know how to use Join statements, along with leveraging your foreign keys knowledge!"
+    "Congrats! You practiced using join statements and leveraged your foreign keys knowledge!"
    ]
   }
  ],
@@ -185,7 +279,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
